--- a/notebooks/Report.ipynb
+++ b/notebooks/Report.ipynb
@@ -165,7 +165,7 @@
       "metadata": {
         "id": "-2NcRvOtzVIw"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -179,7 +179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "DWemnrRfBIXo",
         "outputId": "a6c61761-0581-44a3-a686-4023bef8c203",
@@ -304,7 +304,7 @@
         "id": "B55endvBRzsC",
         "outputId": "768d10c6-d771-4cca-9ed0-9de811232e40"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -474,7 +474,7 @@
         "id": "jhlRB_KWZKUg",
         "outputId": "e3cfad04-a8ee-436f-e4fa-39ad82964a2c"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -560,7 +560,7 @@
         "id": "ldDP7CXoXD1Q",
         "outputId": "3146a60d-497b-45f6-a46e-2a23bc95f170"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -652,7 +652,7 @@
         "id": "JFvXIQfuR1ZT",
         "outputId": "99ccc754-bc89-4689-e1bc-2cf3469487d6"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -734,7 +734,7 @@
       "metadata": {
         "id": "CSJBDhLTxPMl"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -881,7 +881,7 @@
       "metadata": {
         "id": "6GQHfMVEiMdW"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1025,12 +1025,12 @@
       "metadata": {
         "id": "vBJLFLCayQus"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "RUdVDa01BIXr"
       },
@@ -1167,7 +1167,7 @@
       "metadata": {
         "id": "_oWilyeEy_Zm"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1213,7 +1213,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "6O_O1498B59n"
       },
@@ -1344,7 +1344,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "CWewwreCvx1b"
       },
@@ -1460,7 +1460,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "id": "uP7le4_lEom5"
       },
@@ -1568,7 +1568,7 @@
       "metadata": {
         "id": "4rcrj3A0KCQU"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1581,7 +1581,7 @@
       "metadata": {
         "id": "8Uwa3nJ5KX_U"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1603,7 +1603,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1641,7 +1641,7 @@
           ]
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1693,7 +1693,7 @@
           "height": 573
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1719,7 +1719,7 @@
       "metadata": {
         "id": "5iU-Vnww5vbl"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1740,7 +1740,7 @@
       "metadata": {
         "id": "nGnmVjQE4ofS"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1752,7 +1752,7 @@
       "metadata": {
         "id": "rLNI6ftqLLDM"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1773,7 +1773,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1810,7 +1810,7 @@
           ]
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1863,7 +1863,7 @@
           "height": 573
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1951,7 +1951,7 @@
           ]
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2029,7 +2029,7 @@
         },
         "outputId": "1d8197cd-603c-4a83-a664-483e969277a2"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2066,7 +2066,7 @@
         "id": "RGKFtyfVX0wV",
         "outputId": "0ac56083-ef86-40f4-e73d-2636218677a6"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2340,6 +2340,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "The Lite variant performs marginally better across all criteria. This implies that the increased complexity in the Final variation may not always transfer to better summarising quality, implying a trade-off between model complexity and performance efficiency in this specific job of dialogue summary.\n"
+      ],
+      "metadata": {
+        "id": "cXVJFfV0WEVq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#### Qualitative Analysis"
       ],
       "metadata": {
@@ -2371,7 +2380,7 @@
         "id": "1MmhURRMwApX",
         "outputId": "1e0b76ae-bd12-47bb-aaa3-d7768c222c2d"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2496,7 +2505,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2572,7 +2581,8 @@
         "```\n",
         "\n",
         "Experiment 3:\n",
-        "```Original Hidden Dialogue:\n",
+        "```\n",
+        "Original Hidden Dialogue:\n",
         "#Person1#: I'm from auto accident department. Are you Mr. Burns?\n",
         "#Person2#: Hi, Yes, I am William Burns.\n",
         "#Person1#: I'm so sorry for your loss and suffering.\n",
@@ -2592,6 +2602,41 @@
       ],
       "metadata": {
         "id": "-dV-CdCDC3nV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "##### Comparative Insights\n",
+        "\n",
+        "- **Relevance and Coherence**: While incomplete, the Custom Lite model is more aligned with the original dialogues than the Custom Final model. The Lite model keeps the conversation's broad idea but struggles with repetition and precision. The summaries for the Custom Final model, on the other hand, are generally useless and repetitious, indicating a potential problem with model training or the attention mechanism.\n",
+        "\n",
+        "- **Complexity vs. Performance**: The performance disparity between the Lite and Final models demonstrates that higher complexity (more layers in the Final model) does not always imply better summarization. Overfitting, insufficient training, or difficulties with how the model handles extended dependencies and complicated structures could all be to blame.\n",
+        "\n",
+        "\n",
+        "- **Model Limitations**: Both models have difficulty producing brief, coherent, and contextually appropriate summaries. The challenges range from repetition to departure from the original context to outright irrelevance, emphasising the difficulty in abstractive summarising jobs, particularly in keeping faithfulness to the source information.\n",
+        "\n",
+        "\n",
+        "\n",
+        "The summaries provided highlight the difficulties in abstractive summarising, notably in retaining relevance, coherence, and brevity. Despite its simplicity, the Custom Lite model performs more nearly to the desired summarising task than the Custom Final model. According to this approach, model architecture and training must be carefully tuned in order to balance complexity with the ability to create accurate and coherent summaries.\n",
+        "\n",
+        "\n",
+        "Addressing the flaws in the custom Seq2Seq models for dialogue summarization necessitates a multidimensional strategy that focuses on enhancing model architecture, training methodology, and potentially integrating powerful pre-trained transformers such as T5.\n",
+        "\n",
+        "##### Leveraging Advanced Pre-trained Models\n",
+        "\n",
+        "1. **Benefits of Pre-trained Models** T5 models have been pre-trained on massive, diverse corpora, giving them a comprehensive comprehension of language and context. Fine-tuning such models for a given purpose, such as dialogue summarising, allows for the use of pre-existing knowledge, potentially leading to higher summary quality.\n",
+        "\n",
+        "2. **Why T5?**: T5 approaches every NLP problem as a text-to-text task, which corresponds nicely with summarization. It is particularly suited to this task due to its ability to convert a discourse into a summary format using a unified text-to-text architecture. Furthermore, T5's pre-training includes comprehending the context and meaning in different text formats, which is an important part of summarization.\n",
+        "\n",
+        "\n",
+        "3. **Fine-tuning on Task-Specific Data**: Fine-tuning T5 on the DialogSum dataset would allow the model to apply its considerable language knowledge to the task of dialogue summarising specifically. This procedure would require only minor changes to the model architecture, with the emphasis focused on adjusting the model to the intricacies and unique requirements of dialogue summary.\n",
+        "\n",
+        "4. **Computational Efficiency**: Using a pre-trained model like as T5 can be more computationally efficient than training a model from scratch, particularly for complicated tasks such as summarization that involve recognising nuanced linguistic patterns.\n"
+      ],
+      "metadata": {
+        "id": "Qb4DOW3zW3Za"
       }
     },
     {
