--- a/notebooks/Report.ipynb
+++ b/notebooks/Report.ipynb
@@ -2672,7 +2672,32 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### FLAN-T5"
+        "### FLAN-T5\n",
+        "\n",
+        "\n",
+        "> FLAN-T5 is a significant step forwards in the field of Natural Language Processing (NLP), notably in the context of transformer-based models. FLAN-T5, which stands for \"Fine-tuned Language Nett on T5,\" is a variant of the original T5 model, also known as Text-to-Text Transfer Transformer. T5 is a versatile model that handles every NLP work as a text-to-text problem and has demonstrated extraordinary effectiveness across a wide range of NLP applications.\n",
+        "\n",
+        "#### Evolution from T5\n",
+        "\n",
+        "> By utilising a unified framework that translates all tasks into a text-to-text format, the T5 model substantially altered the approach to NLP tasks. This architecture, which includes both an encoder and a decoder, enables the model to adapt to different tasks without requiring task-specific architectural adjustments.\n",
+        "\n",
+        "\n",
+        "#### Emergence of FLAN-T5\n",
+        "\n",
+        "> FLAN-T5 enhances T5's capabilities through a process known as instruction tuning. In contrast to traditional fine-tuning, which often focuses on specific tasks or datasets, instruction tuning entails training the model on a diverse selection of tasks delivered in a natural language instruction format. This technique allows FLAN-T5 to understand and execute tasks based on simple text instructions, greatly increasing its flexibility and generalisation capabilities.\n",
+        "\n",
+        "\n",
+        "#### Instruction Tuning: A Key Differentiator\n",
+        "\n",
+        "> FLAN-T5 is more flexible to a wide range of tasks thanks to instruction tuning, which requires little task-specific fine-tuning. This is especially useful for difficult tasks requiring a nuanced comprehension of language and context, such as text summary, question answering, and translation.\n",
+        "\n",
+        "\n",
+        "#### Implementing FLAN-T5\n",
+        "\n",
+        "> The FLAN-T5 model can be fine-tuned on specific datasets like DialogSum for practical applications such as dialogue summarising. This approach adapts the model's broad language comprehension to the specific needs of the task at hand. The `google/flan-t5-small` checkpoint was chosen for tests because it strikes a compromise between model complexity and computational efficiency, making it suited for a wide range of NLP tasks, including but not limited to dialogue summarising.\n",
+        "\n",
+        "\n",
+        "The development of FLAN-T5 represents a big step forwards in NLP, providing a model that is not only adaptable across tasks but also capable of understanding and executing tasks based on natural language instructions. This makes it an invaluable tool in the field of NLP, especially for tasks that need deep language comprehension and adaptability.\n"
       ],
       "metadata": {
         "id": "wkyzAHVPgVim"
