--- a/notebooks/Report.ipynb
+++ b/notebooks/Report.ipynb
@@ -2340,15 +2340,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The Lite variant performs marginally better across all criteria. This implies that the increased complexity in the Final variation may not always transfer to better summarising quality, implying a trade-off between model complexity and performance efficiency in this specific job of dialogue summary.\n"
-      ],
-      "metadata": {
-        "id": "cXVJFfV0WEVq"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "#### Qualitative Analysis"
       ],
       "metadata": {
@@ -2607,41 +2598,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "\n",
-        "##### Comparative Insights\n",
-        "\n",
-        "- **Relevance and Coherence**: While incomplete, the Custom Lite model is more aligned with the original dialogues than the Custom Final model. The Lite model keeps the conversation's broad idea but struggles with repetition and precision. The summaries for the Custom Final model, on the other hand, are generally useless and repetitious, indicating a potential problem with model training or the attention mechanism.\n",
-        "\n",
-        "- **Complexity vs. Performance**: The performance disparity between the Lite and Final models demonstrates that higher complexity (more layers in the Final model) does not always imply better summarization. Overfitting, insufficient training, or difficulties with how the model handles extended dependencies and complicated structures could all be to blame.\n",
-        "\n",
-        "\n",
-        "- **Model Limitations**: Both models have difficulty producing brief, coherent, and contextually appropriate summaries. The challenges range from repetition to departure from the original context to outright irrelevance, emphasising the difficulty in abstractive summarising jobs, particularly in keeping faithfulness to the source information.\n",
-        "\n",
-        "\n",
-        "\n",
-        "The summaries provided highlight the difficulties in abstractive summarising, notably in retaining relevance, coherence, and brevity. Despite its simplicity, the Custom Lite model performs more nearly to the desired summarising task than the Custom Final model. According to this approach, model architecture and training must be carefully tuned in order to balance complexity with the ability to create accurate and coherent summaries.\n",
-        "\n",
-        "\n",
-        "Addressing the flaws in the custom Seq2Seq models for dialogue summarization necessitates a multidimensional strategy that focuses on enhancing model architecture, training methodology, and potentially integrating powerful pre-trained transformers such as T5.\n",
-        "\n",
-        "##### Leveraging Advanced Pre-trained Models\n",
-        "\n",
-        "1. **Benefits of Pre-trained Models** T5 models have been pre-trained on massive, diverse corpora, giving them a comprehensive comprehension of language and context. Fine-tuning such models for a given purpose, such as dialogue summarising, allows for the use of pre-existing knowledge, potentially leading to higher summary quality.\n",
-        "\n",
-        "2. **Why T5?**: T5 approaches every NLP problem as a text-to-text task, which corresponds nicely with summarization. It is particularly suited to this task due to its ability to convert a discourse into a summary format using a unified text-to-text architecture. Furthermore, T5's pre-training includes comprehending the context and meaning in different text formats, which is an important part of summarization.\n",
-        "\n",
-        "\n",
-        "3. **Fine-tuning on Task-Specific Data**: Fine-tuning T5 on the DialogSum dataset would allow the model to apply its considerable language knowledge to the task of dialogue summarising specifically. This procedure would require only minor changes to the model architecture, with the emphasis focused on adjusting the model to the intricacies and unique requirements of dialogue summary.\n",
-        "\n",
-        "4. **Computational Efficiency**: Using a pre-trained model like as T5 can be more computationally efficient than training a model from scratch, particularly for complicated tasks such as summarization that involve recognising nuanced linguistic patterns.\n"
-      ],
-      "metadata": {
-        "id": "Qb4DOW3zW3Za"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "**Clearing GPU Cache**"
       ],
       "metadata": {
@@ -2674,27 +2630,26 @@
       "source": [
         "### FLAN-T5\n",
         "\n",
-        "\n",
-        "> FLAN-T5 is a significant step forwards in the field of Natural Language Processing (NLP), notably in the context of transformer-based models. FLAN-T5, which stands for \"Fine-tuned Language Nett on T5,\" is a variant of the original T5 model, also known as Text-to-Text Transfer Transformer. T5 is a versatile model that handles every NLP work as a text-to-text problem and has demonstrated extraordinary effectiveness across a wide range of NLP applications.\n",
+        "FLAN-T5 is a significant step forwards in the field of Natural Language Processing (NLP), notably in the context of transformer-based models. FLAN-T5, which stands for \"Fine-tuned Language Nett on T5,\" is a variant of the original T5 model, also known as Text-to-Text Transfer Transformer. T5 is a versatile model that handles every NLP work as a text-to-text problem and has demonstrated extraordinary effectiveness across a wide range of NLP applications.\n",
         "\n",
         "#### Evolution from T5\n",
         "\n",
-        "> By utilising a unified framework that translates all tasks into a text-to-text format, the T5 model substantially altered the approach to NLP tasks. This architecture, which includes both an encoder and a decoder, enables the model to adapt to different tasks without requiring task-specific architectural adjustments.\n",
+        "By utilising a unified framework that translates all tasks into a text-to-text format, the T5 model substantially altered the approach to NLP tasks. This architecture, which includes both an encoder and a decoder, enables the model to adapt to different tasks without requiring task-specific architectural adjustments.\n",
         "\n",
         "\n",
         "#### Emergence of FLAN-T5\n",
         "\n",
-        "> FLAN-T5 enhances T5's capabilities through a process known as instruction tuning. In contrast to traditional fine-tuning, which often focuses on specific tasks or datasets, instruction tuning entails training the model on a diverse selection of tasks delivered in a natural language instruction format. This technique allows FLAN-T5 to understand and execute tasks based on simple text instructions, greatly increasing its flexibility and generalisation capabilities.\n",
+        "FLAN-T5 enhances T5's capabilities through a process known as instruction tuning. In contrast to traditional fine-tuning, which often focuses on specific tasks or datasets, instruction tuning entails training the model on a diverse selection of tasks delivered in a natural language instruction format. This technique allows FLAN-T5 to understand and execute tasks based on simple text instructions, greatly increasing its flexibility and generalisation capabilities.\n",
         "\n",
         "\n",
         "#### Instruction Tuning: A Key Differentiator\n",
         "\n",
-        "> FLAN-T5 is more flexible to a wide range of tasks thanks to instruction tuning, which requires little task-specific fine-tuning. This is especially useful for difficult tasks requiring a nuanced comprehension of language and context, such as text summary, question answering, and translation.\n",
+        "FLAN-T5 is more flexible to a wide range of tasks thanks to instruction tuning, which requires little task-specific fine-tuning. This is especially useful for difficult tasks requiring a nuanced comprehension of language and context, such as text summary, question answering, and translation.\n",
         "\n",
         "\n",
         "#### Implementing FLAN-T5\n",
         "\n",
-        "> The FLAN-T5 model can be fine-tuned on specific datasets like DialogSum for practical applications such as dialogue summarising. This approach adapts the model's broad language comprehension to the specific needs of the task at hand. The `google/flan-t5-small` checkpoint was chosen for tests because it strikes a compromise between model complexity and computational efficiency, making it suited for a wide range of NLP tasks, including but not limited to dialogue summarising.\n",
+        "The FLAN-T5 model can be fine-tuned on specific datasets like DialogSum for practical applications such as dialogue summarising. This approach adapts the model's broad language comprehension to the specific needs of the task at hand. The `google/flan-t5-small` checkpoint was chosen for tests because it strikes a compromise between model complexity and computational efficiency, making it suited for a wide range of NLP tasks, including but not limited to dialogue summarising.\n",
         "\n",
         "\n",
         "The development of FLAN-T5 represents a big step forwards in NLP, providing a model that is not only adaptable across tasks but also capable of understanding and executing tasks based on natural language instructions. This makes it an invaluable tool in the field of NLP, especially for tasks that need deep language comprehension and adaptability.\n"
